[package]
name = "shulk"
version = "0.1.0"
authors = ["Benoit Bourlet <benoit.bourlet@domino-uk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
crossterm = { version = "0.19", features = [ "serde" ] }
chrono = { version = "0.4", features = ["serde"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
log4rs = "1.0.0"
log = "0.4.14"
